add video fullscreen but issue with unmuting the video

--- a/Dieu_choisit_nos_voisins.html
+++ b/Dieu_choisit_nos_voisins.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-<!-- <> -->
 <html>
     <head>
         <title>Dieu choisit nos voisins</title>
@@ -20,43 +19,53 @@
                 <li class="active"><a href="boutique.html">Comment nous soutenir</a></li>
             </ul>
             </div>
-        </nav>        
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <a href="Images/lbc_1960.png">
-                            <img src="Images/lbc_1960.png" alt="lbc_1960" height="80">
-                        </a>
+        </nav> 
+        <div id = "par_white_center"> Bienvenue sur le site de mon nouveau projet musical. Si vous ne me connaissez pas encore, je suis Leskiv et je vous invite
+            aujourd'hui à découvrir mon univers dans ce site. 
+            J'ai grandi dans un village unique dans le Sud de la France, dans la garrigue broussaileuse du languedoc, où le ciel est bleu, le soleil tape en été, et où on joue à la pétanque. 
+            Mais ce n'est pas ça l'essentiel. Ce qui est important dans ce village, ce sont les gens. Ces gens ce sont mes voisins et je me suis construit avec eux. 
+            Je vous délivre ici une part de mon enfance et espère que vous apprécierez le résultat, qui est le fruit de mois de travail intense. 
+        </div>     
+        <div class="def" >
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <a href="Images/lbc_1960.png">
+                                <img src="Images/lbc_1960.png" alt="lbc_1960" height="80">
+                            </a>
+                                <div class="caption">
+                                <h3><a href="#origines"><div class="link">Aux origines</div></a></h3>
+                                <p>Nous sommes en 1999. Toute la France est occupée par le réseau internet et la mondialisation… Toute ? Non ! Un village peuplé d’irréductibles Français qui résiste encore : la boissière.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <a href="Images/lbc_2022.png">
+                                <img src="Images/lbc_2022.png" alt="lbc_2022" height="80">
+                            </a>
                             <div class="caption">
-                            <h3><a href="#origines"><div class="link">Aux origines</div></a></h3>
-                            <p>Nous sommes en 1999. Toute la France est occupée par le réseau internet et la mondialisation… Toute ? Non ! Un village peuplé d’irréductibles Français qui résiste encore : la boissière.</p>
-                        </div>
+                                <h3><a href="#chemin"><div class="link">Le chemin</div></a></h3>
+                                <p>De l'excès à la sobriété</p>
+                            </div>
+                        </div>            
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="Images/lbc_2022.png" alt="lbc_2022" height="80">
-                        <div class="caption">
-                            <h3><a href="#chemin"><div class="link">Le chemin</div></a></h3>
-                            <p>De l'excès à la sobriété</p>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="Images/blanc.jpg" alt="blank" height="80">
+                            <div class="caption">
+                                <h3><a href="#projet"><div class="link">Où je vais</div></a></h3>
+                                <p></p>
+                            </div>
                         </div>
-                    </div>            
+                    </div>    
                 </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="Images/blanc.jpg" alt="VDC" height="80">
-                        <div class="caption">
-                            <h3>Où je vais</h3>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>    
             </div>
         </div>
-        <div>
-            <h1><div id='origines' margin-top: 80px><a name='origines'>Aux origines</a></div></h1>
-            <div id = "abc">Lorem ipsum dolor sit amet. Sed nulla omnis in ipsam ipsa a perspiciatis ratione ex unde nulla eos corrupti galisum sit culpa porro non 
+        <div id='origines'>
+            <h1>Aux origines</h1>
+            <div id = "par_white_center">Lorem ipsum dolor sit amet. Sed nulla omnis in ipsam ipsa a perspiciatis ratione ex unde nulla eos corrupti galisum sit culpa porro non 
                 earum officiis. Est illo dolorem in similique omnis et galisum laudantium non voluptatem earum et quis pariatur. Aut suscipit internos vel aliquid 
                 nihil qui minima quod. Ut fugiat expedita et quia voluptas sit iure rerum? Sed quod quia ab corrupti illo minima consequatur aut autem numquam 
                 At repudiandae praesentium! Et incidunt dignissimos qui laudantium facere est recusandae vitae ut repellat possimus et temporibus similique ea 
@@ -65,9 +74,9 @@
                 dolor provident eum voluptatem labore. Qui alias nihil ab accusantium incidunt id maiores sint.
             </div>
         </div> 
-        <div>
-            <h1><div id='chemin'><a name='chemin'>Le chemin</a></div></h1>
-            <div id = "abc">J’ai beau regarder les hommes, soit avec un regard bienveillant, soit avec le mauvais œil, je les trouve toujours occupés, tous 
+        <div id='chemin'>
+            <h1>Le chemin</h1>
+            <div id = "par_white_center">J’ai beau regarder les hommes, soit avec un regard bienveillant, soit avec le mauvais œil, je les trouve toujours occupés, tous 
                 et chacun en particulier, à une même tâche : à faire ce qui est utile à la conservation de l’espèce humaine. Et ce n’est certes pas à cause 
                 d’un sentiment d’amour pour cette espèce, mais simplement puisque, en eux, rien n’est plus ancien, plus fort, plus inexorable, plus invincible que
                 cet instinct, — puisque cet instinct est précisément l’essence de notre espèce et de notre troupeau. Quoique l’on arrive assez rapidement, avec la
@@ -80,42 +89,30 @@
                 excessivement insensée : — mais qui, cela est prouvé, a conservé jusqu’à présent notre race. Je ne sais plus, mon cher frère en humanité, si, en 
                 somme, tu peux vivre au détriment de l’espèce, c’est-à-dire d’une façon « déraisonnable » et « mauvaise » ; ce qui aurait pu nuire à l’espèce 
                 s’est peut-être éteint déjà depuis des milliers d’années et fait maintenant partie de ces choses qui, même auprès de Dieu, ne sont plus possibles. 
-                Suis tes meilleurs ou tes plus mauvais penchants et, avant tout, va à ta perte ! — dans les deux cas tu seras probablement encore, d’une façon ou 
-                d’une autre, le bienfaiteur qui encourage l’humanité, et, à cause de cela, tu pourras avoir tes louangeurs — et de même tes railleurs ! Mais tu ne
-                trouveras jamais celui qui saurait te railler, toi l’individu, entièrement, même dans ce que tu as de meilleur, celui qui saurait te faire 
-                apercevoir, suffisamment pour répondre à la vérité, ton incommensurable pauvreté de mouche et de grenouille !
+                Suis tes meilleurs ou tes plus mauvais penchants et, avant tout, va à ta perte !  
+
             </div>
         </div>
-        <div>
+        <div id='projet'>
             <h1>Où je vais</h1>
-            <div>
-                <h1><div id='projet'><a name='projet'></a></div></h1>
-                <div id = "abc">chaque homme avait la forme d'une sphère, avec le dos et les côtes en arc, quatre mains, autant de jambes, et deux faces reliées à un 
-                    cou arrondi, tout à fait identiques; pour ces deux faces opposées, un seul crâne, mais quatre oreilles, les pudenda en double, et tout le reste, 
-                    que l'on peut imaginer, sur le même modèle. Notre homme pouvait se promener où il voulait, comme aujourd'hui, en station droite; et quand il 
-                    éprouvait le besoin de courir, il s'y prenait comme nos équilibristes qui font la grande roue en lançant leurs jambes en l'air : grâce aux huit 
-                    membres sur lesquels ils prenaient appui, ils avançaient très vite en roulant. S'il y avait trois genres, et tels que j'ai dit, c'est que le 
-                    premier, le mâle, était originellement fils du soleil, le second, femelle, tiré de la terre, et le troisième, participant des deux, de la lune,
-                    parce que la lune aussi a cette double participation. Ils avaient, je l'ai dit, une forme sphérique, et se déplaçaient circulairement, de par 
-                    leur origine; de là aussi venaient leur force terrible et leur vigueur. Ayant alors conçu de superbes pensées, ils entrecprircnt contre les dieux,
-                    et cc que dit Homère d'Éphialte et d'Otos, que ceux-ci entreprirent de monter jusqu'au ciel pour attaquer les divins, on le dit aussi d'eux. 
-                    Alors Zeus et les autres dieux délibérèrent sur le châtiment à leur infliger, et ils ne savaient que faire : pas moyen de les tuer, comme pour
-                    les géants, de les foudroyer et d'anéantir leur race - ce serait supprimer les honneurs et le culte que leur rendent les hommes - ni de tolérer
-                    leur insolence. Après une pénible méditation, Jupiter donc enfin son avis: " Je crois qu'il y a un moyen pour qu'il reste des hommes et que 
-                    pourtant, devenus moins forts, ceux-ci soient délivrés de leur démesure; je m'en vais couper chacun en deux, ils deviendront plus faibles, 
-                    et, du même coup, leur nombre étant grossi, ils nous seront plus utiles; deux membres leur suffiront pour marcher; et s'ils nous semblent 
-                    récidiver dans l'impudence, je les couperai encore en deux, de telle sorte qu'il leur faudra avancer à cloche-pied. " Sitôt dit, sitôt fait : 
-                    Zeus coupa les hommes en deux, comme on coupe la comme pour la faire sécher, ou l'oeuf dur avec un cheveu. Chacun ainsi divisé, il prescrivit 
-                    à Apollon de lui tourner le visage, et sa moitié de cou du côté de la coupure, afin qu'à se bien voir ainsi coupé, I'homme prît le sens de la 
-                    mesure; pour le reste qu'il le guérît ! Apollon donc retourna le visage, et tira de partout sur cc qu'on appelle maintenant le ventre, serra 
-                    comme sur le cordon d'une bourse autour de l'unique ouverture qui restait, et ce fut ce qui est maintenant appelé le nombril. Quant aux plis
-                    que cela faisait, il les effaça pour la plupart, il modela la poitrine, avec un outil assez semblable à celui dont usent les cordonniers pour 
-                    aplanir les cuirs sur la forme; mais il laissa quelques plis, sur le ventre, autour du nombril, destinés à lui rappeler ce qu'il avait subi à
-                    l'origine.
-                </div>
+            <div id = "par_white_center"> chaque homme avait la forme d'une sphère, avec le dos et les côtes en arc, quatre mains, autant de jambes, et deux faces reliées à un 
+                cou arrondi, tout à fait identiques; pour ces deux faces opposées, un seul crâne, mais quatre oreilles, les pudenda en double, et tout le reste, 
+                que l'on peut imaginer, sur le même modèle. Notre homme pouvait se promener où il voulait, comme aujourd'hui, en station droite; et quand il 
+                éprouvait le besoin de courir, il s'y prenait comme nos équilibristes qui font la grande roue en lançant leurs jambes en l'air : grâce aux huit 
+                membres sur lesquels ils prenaient appui, ils avançaient très vite en roulant. S'il y avait trois genres, et tels que j'ai dit, c'est que le 
+                premier, le mâle, était originellement fils du soleil, le second, femelle, tiré de la terre, et le troisième, participant des deux, de la lune,
+                parce que la lune aussi a cette double participation. Ils avaient, je l'ai dit, une forme sphérique, et se déplaçaient circulairement, de par 
+                leur origine; de là aussi venaient leur force terrible et leur vigueur. Ayant alors conçu de superbes pensées, ils entrecprircnt contre les dieux,
+                et cc que dit Homère d'Éphialte et d'Otos, que ceux-ci entreprirent de monter jusqu'au ciel pour attaquer les divins, on le dit aussi d'eux. 
+                Alors Zeus et les autres dieux délibérèrent sur le châtiment à leur infliger, et ils ne savaient que faire : pas moyen de les tuer, comme pour
+                les géants, de les foudroyer et d'anéantir leur race - ce serait supprimer les honneurs et le culte que leur rendent les hommes - ni de tolérer
+                leur insolence. 
             </div>
 
         </div>   
+    </div>
+    <div class="footer">
+        Website made in 2022
     </div>
     </body>    
 </html>
