--- a/index.html
+++ b/index.html
@@ -9,29 +9,22 @@
         <link href="style/DCNV_css.css" rel="stylesheet" type="text/css"/>
     </head>
     <body> 
+        <div class='container' id = 'video_container'>
         <iframe id="myVideo" width="" height="315" src="https://www.youtube.com/embed/y8fqpi-Qe0k?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
-        <div class='container'>
+        </div>
             <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="Dieu_choisit_nos_voisins.html">Quelques mots sur mon EP</a></li>
-                    <li class="active"><a href="sounds.html">Le coeur du projet : les sons</a></li>
-                    <li class="active"><a href="acteurs.html">L'équipe</a></li>
-                    <li class="active"><a href="boutique.html">Comment nous soutenir</a></li>
+                    <li class="active"><a href="#video_container">Immersion au coeur du projet</a></li>
+                    <li class="active"><a href="#historique">L'historique</a></li>
+                    <li class="active"><a href="#equipe">L'équipe</a></li>
+                    <li class="active"><a href="#boutique">La boutique</a></li>
                 </ul>
                 </div>
             </nav> 
             
         </div>     
-        <!--  <div class="content"> -->
-            <h1>titre</h1>
-            <p> <div id = "par_white_center"> video youtube de présentation du projet </p>
-            <!-- Use a button to pause/play the video with JavaScript -->
-            <button id="myBtn" onclick="myFunction()">Pause</button>
-        <!--   </div> -->
-        <div class="footer">
-            Website made in 2022
-        </div>
+
         <script>
             // Get the video
             var video = document.getElementById("myVideo");
@@ -49,6 +42,71 @@
                 btn.innerHTML = "Play";
               }
             }
-            </script>
+        </script>
+
+
+        <div class='container'> Bienvenue sur le site de mon nouveau projet musical. Si vous ne me connaissez pas encore, je suis Leskiv et je vous invite
+                aujourd'hui à découvrir mon univers dans ce site en visionnant la vidéo au-dessus. Oubliez pas d'activer le son ! 
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <a href="Images/lbc_1960.png">
+                                <img src="Images/lbc_1960.png" alt="lbc_1960" height="80">
+                            </a>
+                                <div class="caption">
+                                <h3><a href="#origines"><div class="link">Aux origines</div></a></h3>
+                                <p>Nous sommes en 1999.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <a href="Images/lbc_2022.png">
+                                <img src="Images/lbc_2022.png" alt="lbc_2022" height="80">
+                            </a>
+                            <div class="caption">
+                                <h3><a href="#chemin"><div class="link">Le chemin</div></a></h3>
+                                <p>De l'excès à la sobriété</p>
+                            </div>
+                        </div>            
+                    </div>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="Images/blanc.jpg" alt="blank" height="80">
+                            <div class="caption">
+                                <h3><a href="#projet"><div class="link">Où je vais</div></a></h3>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+            </div>
+        </div>div>
+        <div class = "container" id='historique'>
+            <h1>Historique</h1>
+            <div id = "par_white_center"> titre_blablabla
+            </div>
+        </div> 
+
+        <div class = "container" id='equipe'>
+            <h1>L'équipe ! </h1>
+            <div id = "par_white_center"> photo de groupe ? Photos des membres de yuga et leur prénom ?
+            </div>
+
+        </div>   
+
+        <div class="container" id='boutique'>
+            <h1>La boutique</h1>
+            <div id = "par_white_center">
+                teeshirt et cd dispo(ajouter photos), contactez moi à cette adresse mail si vous en voulez en me communiquant combie vous en voulez : mail_de_marius@gmail.com
+            </div>
+        </div>
+        <div class="footer">
+            Website made in July 2022 and hosted by OVH. Source code available on Github : 
+        </div>
+        </body>    
+        </html>
     </body>    
 </html>
