try to fix the bug of CSS not interprated on MAC OS by cleaning HTML and CSS files to make them valid

--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 
-<html>
+<html lang = "en">
     <head>
         <title>Dieu choisit nos voisins</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="style/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="style/DCNV_css.css" rel="stylesheet" type="text/css"/>
     </head>
     <body> 
         <div class='container' id = 'video_container'>
-        <iframe id="myVideo" width="" height="315" src="https://www.youtube.com/embed/y8fqpi-Qe0k?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+        <iframe id="myVideo" height="315" src="https://www.youtube.com/embed/y8fqpi-Qe0k?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
         </div>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#video_container">Immersion au coeur du projet</a></li>
-                    <li class="active"><a href="#historique">L'historique</a></li>
-                    <li class="active"><a href="#equipe">L'équipe</a></li>
-                    <li class="active"><a href="#boutique">La boutique</a></li>
-                </ul>
-                </div>
-            </nav> 
-            
-        </div>     
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#video_container">Immersion au coeur du projet</a></li>
+                <li class="active"><a href="#historique">L'historique</a></li>
+                <li class="active"><a href="#equipe">L'équipe</a></li>
+                <li class="active"><a href="#boutique">La boutique</a></li>
+            </ul>
+            </div>
+        </nav> 
 
         <script>
             // Get the video
@@ -55,9 +53,9 @@
                                 <img src="Images/lbc_1960.png" alt="lbc_1960" height="80">
                             </a>
                                 <div class="caption">
-                                <h3><a href="#origines"><div class="link">Aux origines</div></a></h3>
+                                <h3><a href="#origines">Aux origines</a></h3>
                                 <p>Nous sommes en 1999.</p>
-                            </div>
+                                </div>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -66,7 +64,7 @@
                                 <img src="Images/lbc_2022.png" alt="lbc_2022" height="80">
                             </a>
                             <div class="caption">
-                                <h3><a href="#chemin"><div class="link">Le chemin</div></a></h3>
+                                <h3><a href="#chemin">Le chemin</a></h3>
                                 <p>De l'excès à la sobriété</p>
                             </div>
                         </div>            
@@ -75,38 +73,30 @@
                         <div class="thumbnail">
                             <img src="Images/blanc.jpg" alt="blank" height="80">
                             <div class="caption">
-                                <h3><a href="#projet"><div class="link">Où je vais</div></a></h3>
+                                <h3><a href="#projet">Où je vais</a></h3>
                                 <p></p>
                             </div>
                         </div>
                     </div>    
                 </div>
             </div>
-            </div>
-        </div>div>
+        </div>
         <div class = "container" id='historique'>
             <h1>Historique</h1>
-            <div id = "par_white_center"> titre_blablabla
-            </div>
+            titre_blablabla
         </div> 
 
         <div class = "container" id='equipe'>
             <h1>L'équipe ! </h1>
-            <div id = "par_white_center"> photo de groupe ? Photos des membres de yuga et leur prénom ?
-            </div>
-
+            photo de groupe ? Photos des membres de yuga et leur prénom ?
         </div>   
 
         <div class="container" id='boutique'>
             <h1>La boutique</h1>
-            <div id = "par_white_center">
-                teeshirt et cd dispo(ajouter photos), contactez moi à cette adresse mail si vous en voulez en me communiquant combie vous en voulez : mail_de_marius@gmail.com
-            </div>
+            teeshirt et cd dispo(ajouter photos), contactez moi à cette adresse mail si vous en voulez en me communiquant combie vous en voulez : mail_de_marius@gmail.com
         </div>
         <div class="footer">
-            Website made in July 2022 and hosted by OVH. Source code available on Github : 
+            Website made in July 2022 and hosted by OVH. Source code available on Github : https://github.com/BertilleT/Leskiv_website.
         </div>
-        </body>    
-        </html>
     </body>    
 </html>
