try to correct boostrap file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Dieu choisit nos voisins</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="style/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="style/DCNV_css.css" rel="stylesheet" type="text/css"/>
     </head>
     <body> 
@@ -74,7 +74,7 @@
                             <img src="Images/blanc.jpg" alt="blank" height="80">
                             <div class="caption">
                                 <h3><a href="#projet">Où je vais</a></h3>
-                                <p></p>
+                                <p>hey</p>
                             </div>
                         </div>
                     </div>    
