retrieve OVH in footer because finally hsted n github pages

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             teeshirt et cd dispo(ajouter photos), contactez moi à cette adresse mail si vous en voulez en me communiquant combie vous en voulez : mail_de_marius@gmail.com
         </div>
         <div class="footer">
-            Website made in July 2022 and hosted by OVH. Source code available on Github : https://github.com/BertilleT/Leskiv_website.
+            Website made in July 2022, source code available on Github : https://github.com/BertilleT/Leskiv_website.
         </div>
     </body>    
 </html>
